--- a/ExViewer/App.xaml
+++ b/ExViewer/App.xaml
@@ -2,26 +2,29 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <Application.Resources>
-    <ResourceDictionary>
-      <ResourceDictionary.MergedDictionaries>
-        <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
-        <ResourceDictionary Source="Themes/GenericOverride.xaml" />
-        <ResourceDictionary Source="Themes/NamedStyles.xaml" />
-        <ResourceDictionary Source="Converters/Converters.xaml" />
-        <!--DO NOT CHANGE THE ORDER OF FOLLOWING TWO DICTIONARY-->
-        <ResourceDictionary Source="Strings/FallbackDictionary.xaml" />
-        <ResourceDictionary Source="Strings/Dictionary.xaml" />
-        <!--DO NOT CHANGE THE ORDER OF PREVIOUS TWO DICTIONARY-->
-      </ResourceDictionary.MergedDictionaries>
-      <ResourceDictionary.ThemeDictionaries>
-        <ResourceDictionary x:Key="Dark"
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <muxc:XamlControlsResources xmlns:muxc="using:Microsoft.UI.Xaml.Controls" />
+                <ResourceDictionary>
+                    <x:Boolean x:Key="HyperlinkUnderlineVisible">True</x:Boolean>
+                </ResourceDictionary>
+                <ResourceDictionary Source="Themes/GenericOverride.xaml" />
+                <ResourceDictionary Source="Themes/NamedStyles.xaml" />
+                <ResourceDictionary Source="Converters/Converters.xaml" />
+                <!--DO NOT CHANGE THE ORDER OF FOLLOWING TWO DICTIONARY-->
+                <ResourceDictionary Source="Strings/FallbackDictionary.xaml" />
+                <ResourceDictionary Source="Strings/Dictionary.xaml" />
+                <!--DO NOT CHANGE THE ORDER OF PREVIOUS TWO DICTIONARY-->
+            </ResourceDictionary.MergedDictionaries>
+            <ResourceDictionary.ThemeDictionaries>
+                <ResourceDictionary x:Key="Dark"
                             Source="Themes/Dark.xaml" />
-        <ResourceDictionary x:Key="Light"
+                <ResourceDictionary x:Key="Light"
                             Source="Themes/Light.xaml" />
-      </ResourceDictionary.ThemeDictionaries>
-      <Color x:Key="SplashColor">#ffe7dfca</Color>
-      <SolidColorBrush x:Key="SplashBrush"
+            </ResourceDictionary.ThemeDictionaries>
+            <Color x:Key="SplashColor">#ffe7dfca</Color>
+            <SolidColorBrush x:Key="SplashBrush"
                        Color="{StaticResource SplashColor}" />
-    </ResourceDictionary>
-  </Application.Resources>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
